# solarsim

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
.github/: CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: ci.yml
assets/shaders/: grid.frag  grid.vert  light.frag  light.vert  light_source.fs  planet.frag  planet.vert  shader.fs  simple.frag  simple.vert  sun.frag  sun.vert
docs/: CNAME  CONTRIBUTING.md  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  app_8cpp.html  architecture.md  asset__manager_8hpp.html  asset__manager_8hpp.js  asset__manager_8hpp_source.html  camera__component_8hpp.js  classes.html  classsolarsim_1_1_asset_manager.html  classsolarsim_1_1_asset_manager.js  classsolarsim_1_1_engine.html  classsolarsim_1_1_engine.js  classsolarsim_1_1_input_system.html  classsolarsim_1_1_input_system.js  classsolarsim_1_1_physics_system.html  classsolarsim_1_1_registry.js  classsolarsim_1_1_renderer.js  classsolarsim_1_1_scene_manager.html  classsolarsim_1_1_scene_manager.js  dir_2baeb9b2ab4545faf9e2316474ff25e0.html  dir_3a0e3b82484872d02bd65d6789aeef6b.html  dir_3a0e3b82484872d02bd65d6789aeef6b.js  dir_3b632b175d4850e946ee3ba45d8d1f8d.html  dir_3c04bc290434a2bfff240c0777e37105.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_c17ed8a99c2aafc6034c524ffcf900dc.js  dir_cb6e897cb5cd097a761323417c742ef8.js  dir_d44c64559bbebec7f509842c48db8b23.js  dir_da1d252641c1d690e9226c1cabf97c78.js  doxygen_crawl.html  engine_8cpp.html  engine_8hpp.html  engine_8hpp.js  engine_8hpp_source.html  entity_8hpp.html  entity_8hpp.js  (+71 more)
docs/html/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _l_i_c_e_n_s_e.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  asset__manager_8cpp.html  camera__component_8hpp.html  camera__component_8hpp_source.html  classsolarsim_1_1_physics_system.js  classsolarsim_1_1_registry.html  classsolarsim_1_1_renderer.html  classsolarsim_1_1_window.html  classsolarsim_1_1_window.js  dir_2052808828190f934b76e979ee65af8a.html  dir_2052808828190f934b76e979ee65af8a.js  dir_3b632b175d4850e946ee3ba45d8d1f8d.js  dir_3c04bc290434a2bfff240c0777e37105.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_a7f531b1c37460085cedd304cb8df01d.html  dir_a7f531b1c37460085cedd304cb8df01d.js  dir_c17ed8a99c2aafc6034c524ffcf900dc.html  dir_cb6e897cb5cd097a761323417c742ef8.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d66e8d5a7776834ccee339fd5fd3e729.html  dir_d66e8d5a7776834ccee339fd5fd3e729.js  dir_da1d252641c1d690e9226c1cabf97c78.html  doxygen_crawl.html  entity_8hpp_source.html  files.html  files_dup.js  functions.html  globals.html  globals_defs.html  index.html  input__component_8hpp.html  input__component_8hpp_source.html  input__system_8cpp.html  light__component_8hpp.html  material_8hpp.js  material_8hpp_source.html  (+37 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_2.js  all_4.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_2.js  files_3.js  files_8.js  files_9.js  functions_11.js  functions_2.js  functions_4.js  functions_d.js  functions_f.js  pages_0.js  pages_1.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_8.js  pages_a.js  pages_b.js  pages_c.js  (+12 more)
include/components/: camera_component.hpp  component.hpp  grid_component.hpp  input_component.hpp  light_component.hpp  mesh_component.hpp  rigid_body_component.hpp  transform_component.hpp
include/core/: input_manager.hpp  window.hpp
include/engine/: engine.hpp  registry.hpp  renderer.hpp  window.hpp
include/factories/: material_factory.hpp  mesh_factory.hpp  shader_factory.hpp
include/graphics/: camera.hpp  grid.hpp  material.hpp  mesh.hpp  renderer.hpp  shader.hpp  texture.hpp
include/managers/: asset_manager.hpp  input_manager.hpp  scene_manager.hpp  simulation_manager.hpp
include/mesh/: cube.hpp  mesh.hpp
include/scene/: entity.hpp  registry.hpp  scene.hpp
include/simulation/: entity.hpp  planet.hpp  simulation.hpp  sun.hpp
include/systems/: input_system.hpp  physics_system.hpp  render_system.hpp
src/: app.cpp  main.cpp
src/components/: mesh_component.cpp
src/core/: camera.cpp  camera.hpp  input_manager.cpp  input_manager.hpp  renderer.hpp  window.cpp  window.hpp
src/engine/: engine.cpp  renderer.cpp  window.cpp
src/graphics/: camera.cpp  grid.cpp  mesh.cpp  renderer.cpp  shader.cpp  shader.hpp  texture.cpp
src/managers/: asset_manager.cpp  scene_manager.cpp
src/mesh/: cube.cpp  mesh.cpp
src/rendering/: renderer.cpp  renderer.hpp
src/simulation/: entity.hpp  material.hpp  mesh.cpp  mesh.hpp  planet.cpp  planet.hpp  simulation.cpp  simulation.hpp  sun.cpp
src/systems/: input_system.cpp  physics_system.cpp
test/components/: component_integration_test.cpp  (+2 more)
(+73 files in other folders)
